# sdoc-editor

./: .editorconfig  .gitignore  .vscodeignore  AGENTS.md  ASSETS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRODUCT.md  Prompt.md  README.md  SECURITY.md  SETUP.md  TEST-GUIDE.md  THIRD_PARTY_NOTICES.md  ats-init.sh  build-tauri-app.ps1  build-vsix.ps1  build-vsix.sh  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  plan.md  sdoc-project.schema.json  sdoc.schema.json  sdocbook.schema.json  tsconfig.json  vitest.config.ts
.ai/: STATUS.md  config.yaml  decisions.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
cli/: LICENSE  README.md  build.mjs  package.json  tsconfig.json
docs/: SDOC_기능분석_보고서.md  architecture.md
drawio-plugins/: CBD Shapes.xml  Example.xml  sum-junction.js
sample/: example.adoc  example.html  example.sdoc  test.adoc  test.sdoc
scripts/: check-release-artifacts.mjs  check-versions.mjs  generate-document-validators.mjs  generate-third-party-notices.mjs  package-cli.mjs  package-vsix.mjs  postpackage.mjs
shared/: settingsResolver.ts  types.ts
src/: SdocBookProvider.ts  SdocEditorProvider.ts  SdocProjectProvider.ts  extension.ts  updateChecker.ts
tauri-app/: Cargo.toml  build.ps1  eslint.config.mjs  index.html  package-lock.json  (+2 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: atomic_write.rs  commands.rs  document.rs  lib.rs  main.rs  settings.rs
tauri-app/src-tauri/src/commands/: assets.rs  file_io.rs  personal_templates.rs  settings_commands.rs  watchers.rs  workspace.rs
(+340 files in other folders)
