[package]
name = "sdoc-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
dirs = "6"
chrono = "0.4"
slug = "0.1"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "sdoc_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]
