[package]
name = "sdoc-editor"
version = "0.4.21"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "8", features = ["macos_fsevent"] }
dirs = "6"
chrono = "0.4"
slug = "0.1"
open = "5"
trash = "5"
jsonschema = { version = "0.48", default-features = false }
sha2 = "0.11"
uuid = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "sdoc_editor_lib"
# staticlib is only required for mobile (iOS/Android) targets, which this
# desktop-only app does not build. Dropping it avoids compiling/linking the
# crate a third time and noticeably speeds up release builds.
crate-type = ["lib", "cdylib"]
